css/custom.css
.embed-container {
	position: relative;
	padding-bottom: 56.25%;
	height: 0;
	overflow: hidden;
	max-width: 100%;
	height: auto;
	}

.embed-container iframe, .embed-container object, .embed-container embed {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 50%;
	}

pre, code {
	text-align: left;
}

.m{
	background: #CF2430;
	color: #fff;
}

.w{
	background: #10365F;
	color: #fff;
}
.f{
	background: #CECF24;
	color: #fff;
}

.t{
	background: #2982E1;
	color: #fff;
}
.th{
	background: #E9F4FF;
}

